--- a/index.html
+++ b/index.html
@@ -3,9 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li class="logo"><a href="#">Header Logo</a></li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <div>
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here 
+                    under the main title. It's a smaller font and the 
+                    color is lower contrast
+                </p>
+                <button>Sign up</button>
+            </div>
+            <div>
+                <img src="">
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="site-info">
+            <article>
+                <h2>Some random information</h2>
+                <img src="#">
+                <p>this is some subtext under an illustration or image</p>
+            </article>
+            <article>
+                <h2>Some random information</h2>
+                <img src="#">
+                <p>this is some subtext under an illustration or image</p>
+            </article>
+            <article>
+                <h2>Some random information</h2>
+                <img src="#">
+                <p>this is some subtext under an illustration or image</p>
+            </article>
+            <article>
+                <h2>Some random information</h2>
+                <img src="#">
+                <p>this is some subtext under an illustration or image</p>
+            </article>
+        </section>
+        <section class="testimonials">
+            <p>This is an inspiring quote, or a testimonial
+                from a customer. Maybe it's just filling up
+                space, or maybe people will actually read it.
+                Who knows? All I know is that it looks nice.
+            </p>
+            <sub>Thor - Chris Hemsworth</sub>
+        </section>
+        <section class="call-to-action">
+            <h3>Call to action! it's time!</h3>
+            <p>Sign up for our product by clicking that button
+                right over there!
+            </p>
+            <button>Sign Up</button>
+        </section>
+    </main>
+    <footer>
+        <p>Copyright &copy; The Odin Project 2021</p>
+    </footer>
 </body>
 </html>
