Add styling for header nav, .main-nav class Put in background color, font sizes, font color and put link items in single line by using inline-block

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
+        <nav class="clearfix">
+            <ul class="main-nav">
                 <li class="logo"><a href="#">Header Logo</a></li>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
