Put hero image and text side by side

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         <div class="hero">
-            <div>
+            <div class="hero-txt">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here 
                     under the main title. It's a smaller font and the 
@@ -25,8 +25,9 @@
                 </p>
                 <button>Sign up</button>
             </div>
-            <div>
+            <div class="hero-img">
                 <img src="">
+                <p>This is a placeholder for an image</p>
             </div>
         </div>
     </header>
