Finish 'some random information' section

--- a/index.html
+++ b/index.html
@@ -23,33 +23,32 @@
                     under the main title. It's a smaller font and the 
                     color is lower contrast
                 </p>
-                <button>Sign up</button>
+                <button class="hero-btn">Sign up</button>
             </div>
             <div class="hero-img">
                 <img src="">
+                <!-- https://picsum.photos/200/300 -->
                 <p>This is a placeholder for an image</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quibusdam, minus aliquid, necessitatibus ipsum unde dolores</p>
             </div>
         </div>
     </header>
     <main>
         <section class="site-info">
+            <h2>Some random information</h2>
             <article>
-                <h2>Some random information</h2>
                 <img src="#">
                 <p>this is some subtext under an illustration or image</p>
             </article>
             <article>
-                <h2>Some random information</h2>
                 <img src="#">
                 <p>this is some subtext under an illustration or image</p>
             </article>
             <article>
-                <h2>Some random information</h2>
                 <img src="#">
                 <p>this is some subtext under an illustration or image</p>
             </article>
             <article>
-                <h2>Some random information</h2>
                 <img src="#">
                 <p>this is some subtext under an illustration or image</p>
             </article>
