--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 space, or maybe people will actually read it.
                 Who knows? All I know is that it looks nice.
             </p>
-            <sub>Thor - Chris Hemsworth</sub>
+            <p class="author">-Thor, Chris Hemsworth</p>
         </section>
         <section class="call-to-action">
             <h3>Call to action! it's time!</h3>
