--- a/index.html
+++ b/index.html
@@ -62,11 +62,15 @@
             <p class="author">-Thor, Chris Hemsworth</p>
         </section>
         <section class="call-to-action">
-            <h3>Call to action! it's time!</h3>
-            <p>Sign up for our product by clicking that button
-                right over there!
-            </p>
-            <button>Sign Up</button>
+            <div class="cta-txt">
+                <h3>Call to action! it's time!</h3>
+                <p>Sign up for our product by clicking that button
+                    right over there!
+                </p>
+            </div>
+            <div class="cta-btn-container">
+                <button class="cta-btn">Sign Up</button>
+            </div>
         </section>
     </main>
     <footer>
