--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
 </head>
 <body>
     <header>
-        <nav class="clearfix">
-            <ul class="main-nav">
-                <li class="logo"><a href="#">Header Logo</a></li>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </nav>
-        <div class="hero">
-            <div class="hero-txt">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here 
-                    under the main title. It's a smaller font and the 
-                    color is lower contrast
-                </p>
-                <button class="hero-btn">Sign up</button>
-            </div>
-            <div class="hero-img">
-                <img src="">
-                <!-- https://picsum.photos/200/300 -->
-                <p>This is a placeholder for an image</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quibusdam, minus aliquid, necessitatibus ipsum unde dolores</p>
+        <div class="container">
+            <nav class="clearfix">
+                <ul class="main-nav">
+                    <li class="logo"><a href="#">Header Logo</a></li>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </nav>
+            <div class="hero">
+                <div class="hero-txt">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here 
+                        under the main title. It's a smaller font and the 
+                        color is lower contrast
+                    </p>
+                    <button class="hero-btn">Sign up</button>
+                </div>
+                <div class="hero-img">
+                    <img src="">
+                    <!-- https://picsum.photos/200/300 -->
+                    <p>This is a placeholder for an image</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quibusdam, minus aliquid, necessitatibus ipsum unde dolores</p>
+                </div>
             </div>
         </div>
     </header>
