Remove placeholder text fpr image in hero. Add hero image

--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
                     <button class="hero-btn">Sign up</button>
                 </div>
                 <div class="hero-img">
-                    <img src="">
-                    <!-- https://picsum.photos/200/300 -->
-                    <p>This is a placeholder for an image</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quibusdam, minus aliquid, necessitatibus ipsum unde dolores</p>
+                    <img src="https://picsum.photos/id/63/200/300">
                 </div>
             </div>
         </div>
