--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
             </article>
         </section>
         <section class="testimonials">
-            <p>This is an inspiring quote, or a testimonial
-                from a customer. Maybe it's just filling up
-                space, or maybe people will actually read it.
-                Who knows? All I know is that it looks nice.
-            </p>
-            <p class="author">-Thor, Chris Hemsworth</p>
+            <div class="container">
+                <p>This is an inspiring quote, or a testimonial
+                    from a customer. Maybe it's just filling up
+                    space, or maybe people will actually read it.
+                    Who knows? All I know is that it looks nice.
+                </p>
+                <p class="author">-Thor, Chris Hemsworth</p>
+            </div>
         </section>
         <section class="call-to-action">
             <div class="cta-txt">
